--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ nav ul li a:visited {
     padding: 0 20px;
     line-height: 105px;
     background-color: white;
-    color: green;
+    color: black;
     text-decoration: none;
 	font-weight: bold;
 }
