--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@ h2 {
     font-size: 55px;
     text-transform: uppercase;
     font-weight: 900;
-    color: black;
+    color: lightgray;
     background: -webkit-linear-gradient(left,#ff005e,#ff01c9,#a700ff);
     -webkit-background-clip: text;
     margin: 0;
