--- a/style.css
+++ b/style.css
@@ -421,7 +421,7 @@ footer a:hover {
 .table {
 	position: relative;
 	text-align: center;
-	color: white;
+	color: -webkit-linear-gradient(left,white,grey,black);
 	font-size: 0vw;
     
 }
