--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ footer a {
 }
 /*(link color when moused over)*/
 footer a:hover {
-	color: #cc00b3;
+	color: lightgray;
 }
 
 /*----------------AUDIO BOARD-----------------*/
