--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
       transform: translate(-50%, -50%);
       overflow: hidden;
       white-space: nowrap;
-      font-family: "Copperplate Gothic", piedra;
+      font-family: "Verdana", sans-serif;
       font-size: 48px;
     }
   </style>
@@ -58,7 +58,7 @@
 
 body {
 	color: black; /*(default font color for the entire page)*/
-	font-family: 'piedra', sans-serif;
+	font-family: 'verdana', sans-serif;
 	font-weight: 300; /*(font thickness)*/
 }
 
@@ -156,7 +156,7 @@ a.text:hover, a.text:active {
 }
 .row a{
 	color: #1e1f32;
-    font-family: "Open Sans",sans-serif;
+    font-family: "verdana",sans-serif;
     text-transform: uppercase;
     padding: .5rem 1rem;
     padding-right: 2rem;
@@ -224,7 +224,7 @@ a.text:hover, a.text:active {
 	padding-left: 80px;
 	float: left;
 	color: #000000;
-	font-family: sans-serif;
+	font-family: verdana;
 	font-size: small;
   }
 	
@@ -321,7 +321,7 @@ h1 {
 }
 
 h2 {
-	font-family: 'Raleway',sans-serif;
+	font-family: 'verdana',sans-serif;
     text-align: center;
     font-size: 55px;
     text-transform: uppercase;
@@ -379,7 +379,7 @@ filter: alpha(opacity=70)
 #alt-caption {
     background-color: black;
     color: #ffffff;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'verdana', sans-serif;
     font-size: .9em;
     margin-left: auto;
     margin-right: auto;
@@ -467,7 +467,7 @@ footer a:hover {
   cursor: pointer; /* Add a mouse pointer on hover */
   padding: 15px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'verdana', sans-serif;
   font-size: 10px; /* Increase font size */
 }
 
