--- a/style.css
+++ b/style.css
@@ -241,10 +241,47 @@ a.text:hover, a.text:active {
 
 .container {
 	position: relative;
-    background-image: url(img/main.jpg);
-    height: 100vh;
-    background-size: cover;
-    background-position: 50% 50%;
+	background-image: url(img/main.jpg);
+	height: 100vh;
+	background-size: cover;
+	background-position: 50% 50%;
+}
+
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.animated-text {
+	color: white;
+	font-size: 48px;
+	font-weight: bold;
+	animation: typewriter 4s steps(20) 1s forwards, flicker 2s infinite;
+}
+
+@keyframes typewriter {
+	from {
+		width: 0;
+	}
+	to {
+		width: 100%;
+	}
+}
+
+@keyframes flicker {
+	0%, 100% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.8;
+	}
 }
 
 /*----------------Main Content Area(this is where all the content below the navigation bar will go)--*/
