--- a/style.css
+++ b/style.css
@@ -261,39 +261,24 @@ a.text:hover, a.text:active {
 
 .animated-text {
 	color: white;
-	font-size: 60px;
+	font-size: 75px;
 	font-weight: bold;
-	animation: typewriter 4s steps(20) 1s forwards, flicker 2s infinite;
 	position: fixed;
 	top: 50%;
-	left: calc(66.6667% + 20px);
+	left: calc(25% + 20px);
 	transform: translate(-50%, -50%);
+	white-space: nowrap;
+	overflow: hidden;
+	animation: typewriter 4s steps(20) 1s forwards;
 }
 
 @keyframes typewriter {
 	from {
 		width: 0;
 	}
+
 	to {
 		width: 100%;
-	}
-}
-
-@keyframes flicker {
-	0%, 100% {
-		opacity: 1;
-	}
-	20%, 80% {
-		opacity: 0.8;
-	}
-	30%, 70% {
-		opacity: 0.5;
-	}
-	40%, 60% {
-		opacity: 0.2;
-	}
-	50% {
-		opacity: 0;
 	}
 }
 
