--- a/style.css
+++ b/style.css
@@ -296,16 +296,17 @@ a.text:hover, a.text:active {
 }
 
 h1 {
+	font-family: 'zeyada', sans-serif;
 	line-height: 1.5;
 	text-transform: uppercase;
-	font-size: 16px;
+	font-size: 20px;
     color: black;
 }
 
 h2 {
 	font-family: 'verdana', sans-serif;
     text-align: center;
-    font-size: 55px;
+    font-size: 45px;
     text-transform: uppercase;
     font-weight: 900;
     color: black;
