--- a/style.css
+++ b/style.css
@@ -269,7 +269,16 @@ a.text:hover, a.text:active {
 	transform: translate(-50%, -50%);
 	white-space: nowrap;
 	overflow: hidden;
-	animation: typewriter 4s steps(20) 1s forwards;
+}
+
+@keyframes typewriter {
+	from {
+		width: 0;
+	}
+
+	to {
+		width: 100%;
+	}
 }
 
 @keyframes typewriter {
