--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ a.text:hover, a.text:active {
 	width: 100%;
 }
 
-.container.container-1
+.container
 	position: relative;
 	background-image: url(img/main.jpg);
 	height: 100vh;
@@ -259,7 +259,7 @@ a.text:hover, a.text:active {
 	align-items: center;
 }
 
-.animated-text {
+.text {
 	color: white;
 	font-size: 75px;
 	font-weight: bold;
@@ -270,45 +270,6 @@ a.text:hover, a.text:active {
 	white-space: nowrap;
 	overflow: hidden;
 }
-
-@keyframes typewriter {
-	from {
-		width: 0;
-	}
-
-	to {
-		width: 100%;
-	}
-}
-
-@keyframes typewriter {
-	from {
-		width: 0;
-	}
-
-	to {
-		width: 100%;
-	}
-}
-
-.container.container-2 {
-  text-align: center;
-  font-family: "Zeyada", cursive;
-  color: #FD6A37;
-}
-
-.animated-text-2 {
-	color: white;
-	font-size: 24px;
-	font-weight: bold;
-	position: fixed;
-	top: 50%;
-	left: calc(16% + 20px);
-	transform: translate(-50%, -50%);
-	white-space: nowrap;
-	overflow: hidden;
-}
-
 
 /*----------------Main Content Area(this is where all the content below the navigation bar will go)--*/
 
