--- a/style.css
+++ b/style.css
@@ -261,12 +261,12 @@ a.text:hover, a.text:active {
 
 .text {
 	color: white;
-	font-family: 'zeyada', sans-serif;
+	font-family: 'Courier New', monospace;
 	font-size: 75px;
 	font-weight: bold;
 	position: absolute;
 	top: 38%;
-	left: calc(16% + 20px);
+	left: 16%;
 	transform: translate(-50%, -50%);
 	white-space: nowrap;
 	overflow: hidden;
