--- a/style.css
+++ b/style.css
@@ -237,14 +237,13 @@ a.text:hover, a.text:active {
 
 .image1 {
 	width: 100%;
-}
-
+	
 .container {
 	position: relative;
-	background-image: url(img/main.jpg);
-	height: 100vh;
-	background-size: cover;
-	background-position: 50% 50%;
+}
+
+.container img {
+	width: 100%;
 }
 
 .overlay {
@@ -259,14 +258,14 @@ a.text:hover, a.text:active {
 	align-items: center;
 }
 
-.text {
-	color: white;
+.text-overlay {
+	color: lightgray;
 	font-family: 'Courier New', monospace;
 	font-size: 75px;
 	font-weight: bold;
 	position: absolute;
-	top: 38%;
-	left: 16%;
+	top: 50%;
+	left: 50%;
 	transform: translate(-50%, -50%);
 	white-space: nowrap;
 	overflow: hidden;
