--- a/style.css
+++ b/style.css
@@ -237,13 +237,14 @@ a.text:hover, a.text:active {
 
 .image1 {
 	width: 100%;
-	
-.container {
-	position: relative;
 }
 
-.container img {
-	width: 100%;
+.container {
+	position: relative;
+	background-image: url(img/main.jpg);
+	height: 100vh;
+	background-size: cover;
+	background-position: 50% 50%;
 }
 
 .overlay {
@@ -258,14 +259,14 @@ a.text:hover, a.text:active {
 	align-items: center;
 }
 
-.text-overlay {
-	color: lightgray;
+.text {
+	color: white;
 	font-family: 'Courier New', monospace;
 	font-size: 75px;
 	font-weight: bold;
 	position: absolute;
-	top: 50%;
-	left: 50%;
+	top: 38%;
+	left: 16%;
 	transform: translate(-50%, -50%);
 	white-space: nowrap;
 	overflow: hidden;
@@ -295,7 +296,7 @@ h1 {
 h2 {
 	font-family: 'verdana', sans-serif;
     text-align: center;
-    font-size: 30px;
+    font-size: 45px;
     text-transform: uppercase;
     font-weight: 900;
     color: black;
