--- a/style.css
+++ b/style.css
@@ -392,26 +392,72 @@ footer a:hover {
 
 /*----------------AUDIO BOARD-----------------*/
 
-.table {
-	position: relative;
-	text-align: center;
-	color: -webkit-linear-gradient(left,white,grey,black);
-	font-size: 0vw;
-    
+.row {
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 0;
+  position: relative;
+  padding: 65px 45px;
+  text-align: center;
+  background-color: darkgray;
+  color: black;
 }
 
-.trip {text-align:center;}
+h2 {
+  font-family: 'verdana', sans-serif;
+  text-align: center;
+  font-size: 30px;
+  text-transform: uppercase;
+  font-weight: 900;
+  color: black;
+  background: -webkit-linear-gradient(left, #FD6A37, gray, #a700ff);
+  -webkit-background-clip: text;
+  margin: 0;
+  line-height: initial;
+}
 
-.trip img{
-  display:inline-block;
-  width:30%;
-  margin:0 1% 0 1%;
-  }
+.table {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px; /* Add margin to separate from the heading */
+}
+
+.rollover-container {
+  position: relative;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .rollover {
-	cursor: pointer;
-    padding-left: 15px;
-    padding-right: 15px;
+  width: 200px;
+  height: 200px;
+}
+
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 200px;
+  height: 200px;
+  display: none;
+}
+
+.tab {
+  line-height: 1.5;
+  color: black;
+}
+
+.tab a {
+  color: black;
+  text-decoration: none;
+}
+
+.tab a:hover {
+  color: blue;
 }
 
 /*--------------background colors----------*/
