--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ a.text:hover, a.text:active {
 .overlay {
 	position: absolute;
 	top: 0;
-	left: 0;
+	left: 18%;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
