--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ a.text:hover, a.text:active {
 
 .container {
 	position: relative;
-    background-image: url(img/main-img.jpg); /*(image logo)*/
+    background-image: url(img/main.jpg); /*(image logo)*/
     height: 100vh;
     background-size: cover;
     background-position: 50% 50%;
