--- a/style.css
+++ b/style.css
@@ -241,11 +241,37 @@ a.text:hover, a.text:active {
 
 .container {
 	position: relative;
-    background-image: url(img/main.jpg); /*(image logo)*/
-    height: 100vh;
-    background-size: cover;
-    background-position: 50% 50%;
+	background-image: url(img/main.jpg);
+	height: 100vh;
+	background-size: cover;
+	background-position: 50% 50%;
 }
+
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 18%;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.text {
+	color: white;
+	font-family: 'Courier New', monospace;
+	font-size: 75px;
+	font-weight: bold;
+	position: absolute;
+	top: 38%;
+	left: 16%;
+	transform: translate(-50%, -50%);
+	white-space: nowrap;
+	overflow: hidden;
+}
+
 
 /*----------------Main Content Area(this is where all the content below the navigation bar will go)--*/
 .row {
