--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ a.text:hover, a.text:active {
 	left: 18%;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: transparent; /* Change the background color to transparent */
 	display: flex;
 	justify-content: center;
 	align-items: center;
