--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ a.text:hover, a.text:active {
 .overlay {
 	position: absolute;
 	top: 0;
-	left: 18%;
+	right: 18%;
 	width: 100%;
 	height: 100%;
 	background-color: transparent; /* Change the background color to transparent */
