--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ a.text:hover, a.text:active {
 
 .overlay {
 	position: absolute;
-	top: 0;
+	top: 10%;
 	right: 27%;
 	width: 100%;
 	height: 100%;
