--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ a.text:hover, a.text:active {
 
 .overlay {
 	position: absolute;
-	top: 32%;
+	top: 28%;
 	right: 20%;
 	width: 100%;
 	height: 100%;
@@ -262,7 +262,7 @@ a.text:hover, a.text:active {
 .text {
 	color: white;
 	font-family: 'Courier New', monospace;
-	font-size: 26px;
+	font-size: 22px;
 	font-weight: bold;
 	position: absolute;
 	top: 50%;
@@ -291,13 +291,13 @@ article {
 }
 
 h1 {
-	font-family: "montserrat",sans-serif;
+	font-family: "zeyada",sans-serif;
     text-align: center;
     font-size: 55px  !important;;
     text-transform: uppercase;
     font-weight: 2000;
     color: #FF0CFF;
-    background: -webkit-linear-gradient(right,#B8BABA,white,#B8BABA);
+    background: -webkit-linear-gradient(right,black,white);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin: 0;
