--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ h2 {
     font-size: 55px;
     text-transform: uppercase;
     font-weight: 900;
-    color: #FF0CFF;
+    color: darkgrey;
     background: -webkit-linear-gradient(right,#D4D400,#28C761,#024709);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
