--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ a.text:hover, a.text:active {
 	text-decoration: none;
 }
 .row a:hover{
-	    background-color: #f0f;
+	    background-color: white;
     color: initial;
 	    text-decoration: none;
     transition: all 0.3s ease-in 0s;
