--- a/style.css
+++ b/style.css
@@ -415,7 +415,8 @@ footer a:hover {
   padding: 65px 45px;
   text-align: center;
   background-color: darkgray;
-  color: black;
+  background-color: black; /* Set the background color to black */
+  color: white;
 }
 
 h2 {
@@ -424,8 +425,8 @@ h2 {
   font-size: 30px;
   text-transform: uppercase;
   font-weight: 900;
-  color: black;
-  background: -webkit-linear-gradient(left, #FD6A37, gray, #a700ff);
+  color: white; 
+  background: -webkit-linear-gradient(left, white, lightgrey);
   -webkit-background-clip: text;
   margin: 0;
   line-height: initial;
@@ -459,7 +460,7 @@ h2 {
 
 .tab {
   line-height: 1.5;
-  color: black;
+   color: white; /* Set the text color to white */
 }
 
 .tab a {
