--- a/style.css
+++ b/style.css
@@ -433,7 +433,7 @@ h2 {
   text-transform: uppercase;
   font-weight: 900;
   color: white; 
-  background: -webkit-linear-gradient(left, white, lightgrey);
+  background: -webkit-linear-gradient(left, white, lightgrey,darkgrey);
   -webkit-background-clip: text;
   margin: 0;
   line-height: initial;
