--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ article {
   text-transform: uppercase;
   font-weight: 2000;
   color: black;
-  background: -webkit-linear-gradient(left,red, black);
+  background: -webkit-linear-gradient(left,white,darkred,black);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin: 0;
