--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ nav ul li ul li a {
 }	
 
 a.text:link, a.text:visited {
-    background-color: #FD6A37;
+    background-color: black;
     color: white;
     padding: 4px 4px;
     text-align: center;
@@ -121,7 +121,7 @@ a.text:hover, a.text:active {
     font-size: 16px;
     font-weight: 600;
     line-height: initial;
-    background: url(img/arrow.png) lightgray;
+    background: url(img/arrow.png) gray;
     background-size: 40px;
     background-repeat: no-repeat;
     background-position: 96%;
@@ -129,7 +129,7 @@ a.text:hover, a.text:active {
 }
 .row a:hover{
 	    background-color: white;
-    color: initial;
+    color: black;
 	    text-decoration: none;
     transition: all 0.3s ease-in 0s;
 }
