--- a/style.css
+++ b/style.css
@@ -387,7 +387,7 @@ filter: alpha(opacity=70)
 #alt-caption {
     background-color: transparent;
     color: #ffffff;
-    font-family: 'montserrat', sans-serif;
+    font-family: 'zeyada', sans-serif;
     font-size: .9em;
     margin-left: auto;
     margin-right: auto;
