--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ h2 {
   text-transform: uppercase;
   font-weight: 900;
   color: white; 
-  background: -webkit-linear-gradient(left, white, lightgrey,darkgrey);
+  background: black;
   -webkit-background-clip: text;
   margin: 0;
   line-height: initial;
