--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
 /* CSS Document */
 
+/*----------------UNIFORM COLORS-----------------*/
+
+h1 {
+  color: red; /* Set color for <h1> */
+}
+
+h2 {
+  color: blue; /* Set color for <h2> */
+}
+
+h3 {
+  color: green; /* Set color for <h3> */
+}
+
 /*----------------PARALLAX IMAGE-----------------*/
 .parallax {
 	min-height: 450px;
