--- a/style.css
+++ b/style.css
@@ -521,7 +521,7 @@ h2 {
 }
 
 .orangeBG {
-	background: -webkit-linear-gradient(left,black,dark,grey,white);
+	background: black;
 }
 
 /*----------------back to top button-----------------*/
