--- a/style.css
+++ b/style.css
@@ -366,6 +366,7 @@ p {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
+  height: auto;
   z-index: 1;
   position: relative;        
 }
