--- a/style.css
+++ b/style.css
@@ -287,6 +287,7 @@ a.text:hover, a.text:active {
 }
 
 /*----------------Main Content Area(this is where all the content below the navigation bar will go)--*/
+
 .row {
 	margin-right: auto;
 	margin-left: auto;
@@ -358,6 +359,19 @@ h2 {
 
 p {
   line-height: 1.5;
+}
+
+h2#home {
+  font-family: 'zeyada', sans-serif;
+  text-align: center;
+  font-size: 35px;
+  text-transform: uppercase;
+  font-weight: 900;
+  color: -webkit-linear-gradient(left,white,gray,red,darkred);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: 0;
+  line-height: initial;
 }
 
 /*----------------SLIDESHOW-----------------*/
