--- a/style.css
+++ b/style.css
@@ -436,6 +436,11 @@ video {
     background-color: black;
 }
 
+  h2#vid {
+    color: -webkit-linear-gradient(left,white,gray,red,darkred); /* Change the color to your desired color */
+    font-style: bold; /* Change the font style to italic or your desired style */
+  }
+
 /*----------------FOOTER-----------------*/
 footer {
 	margin-left: auto;
