--- a/style.css
+++ b/style.css
@@ -376,7 +376,7 @@ h2#home {
   font-size: 35px;
   text-transform: uppercase;
   font-weight: 900;
-  color: -webkit-linear-gradient(left,white,gray,red,#880808);
+  color: #880808;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin: 0;
