--- a/style.css
+++ b/style.css
@@ -359,7 +359,7 @@ h2#home {
   font-size: 35px;
   text-transform: uppercase;
   font-weight: 900;
-  color: #880808;
+  color: white;
   -webkit-background-clip: text;
   margin: 0;
   line-height: initial;
